<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">DabDrive?</string>
  <string name="action_settings">Settings</string>
  <string name="action_share">Share</string>
  <string name="radio_button_male">Male</string>
  <string name="radio_button_female">Female</string>
  <string name="radio_button_english">English</string>
  <string name="radio_button_macedonian">Macedonian</string>
  <string name="radio_button_driving_license_less">&lt; 2 years</string>
  <string name="radio_button_driving_license_more">&gt; 2 years</string>
  <string name="label_gender">Gender</string>
  <string name="label_language">Language</string>
  <string name="label_weight">Weight</string>
  <string name="share">Share</string>
  <string name="label_who">CHOOSE SIZE</string>
  <string name="label_time_interval">How long have you been drinking?</string>
  <string name="button_calculate">CALCULATE</string>
  <string name="button_alarm">SET ALARM</string>
  <string name="button_reset">RESET</string>
  <string name="bac_label">YOUR BAC LEVEL:</string>
  <string name="sober_label">You will be completely sober in:</string>
  <string name="enter_number_label">Add beers</string>
  <string name="label_driving_license">Driving License</string>

  <string name="weight_warning">Error! Please enter a valid weight value.</string>
  <string name="snack_settings">Settings</string>
  <string name="time_warning">Warning! The time is set to 0.</string>
  <string name="drinks_warning">Please enter number of beers above.</string>

  <string name="large">1,5L</string>
  <string name="medium">0,5L</string>
  <string name="small">0,33L</string>

  <string name="ok">OK</string>
  <string name="hours">HOURS</string>
  <string name="minutes">MINUTES</string>

  <string name="label_taxi_global">Taxi Global</string>
  <string name="label_taxi_riva">Taxi Riva</string>
  <string name="label_taxi_pulstars">Taxi Pulstars</string>

  <string name="after_time_label">o\'clock</string>

  <string name="warning">WARNING!</string>
  <string name="reset_text_one">You have a timer set! The next calculation will reset the timer.</string>
  <string name="reset_text_two">Do you want to start a new timer?</string>

  <string name="sober">You are sober.</string>
  <string name="dialog_warning_info">The allowed limit in RM for drivers with driving license %s is</string>
  <string name="dialog_warning_bac">You musn\'t drive!!!</string>
  <string name="snack_bar_sober_time">Please fill in all the required information</string>
  <string name="alarm_title">Zlaten Dab Alarm</string>
  <string name="alarm_message">You are now sober. Grab a beer! Cheers!</string>
  <string name="snack_bar_alarm">Alarm is set.</string>
</resources>
