<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:background="@color/colorPrimary"
              android:orientation="vertical"
              android:padding="16dp">

  <TextView
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:text="@string/warning"
    android:textColor="@color/textColorPrimary"
    android:textSize="20sp"/>

  <TextView
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:text="@string/reset_text_one"
    android:textColor="@color/textColorPrimary"
    android:textSize="18sp"/>

  <TextView
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:text="@string/reset_text_two"
    android:textColor="@color/textColorPrimary"
    android:textSize="18sp"/>

  <Button
    android:id="@+id/confirmButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@null"
    android:text="@string/ok"
    android:textColor="@color/textColorPrimary"
    android:textSize="18sp"/>

</LinearLayout>