<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:background="@color/colorPrimary"
              android:orientation="vertical"
              android:padding="16dp">

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/hours"
    android:textColor="@color/textColorPrimary"
    android:textSize="18sp"/>

  <LinearLayout
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.gc.materialdesign.views.Slider
      android:id="@+id/sliderHours"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/zlatenDab"
      materialdesign:max="12"
      materialdesign:min="0"/>

    <TextView
      android:id="@+id/chosenHoursLabel"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:gravity="end"
      android:text="0"
      android:textColor="@color/textColorPrimary"
      android:textSize="20sp"
      android:textStyle="bold"/>

  </LinearLayout>

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/minutes"
    android:textColor="@color/textColorPrimary"
    android:textSize="18sp"/>

  <LinearLayout
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:orientation="vertical">

    <com.gc.materialdesign.views.Slider
      android:id="@+id/sliderMinutes"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/zlatenDab"
      materialdesign:max="59"
      materialdesign:min="0"/>

    <TextView
      android:id="@+id/chosenMinutesLabel"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:gravity="end"
      android:text="0"
      android:textColor="@color/textColorPrimary"
      android:textSize="20sp"
      android:textStyle="bold"/>

  </LinearLayout>

  <Button
    android:id="@+id/confirmButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@null"
    android:text="@string/ok"
    android:textColor="@color/textColorPrimary"
    android:textSize="18sp"/>

</LinearLayout>